added apperrors, httpmodels, migrations...
