# handlers/handler.go
@@ -4,6 +4,7 @@ import (
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
 	"log/slog"
+	"project-auction/services"
 )
 
 type Item struct {
@@ -13,22 +14,37 @@ type Item struct {
 }
 
 type Handler struct {
-	log *slog.Logger
+	Log         *slog.Logger
+	UserService services.UserService
+	ItemService services.ItemService
 }
 
 type Config struct {
-	EchoRouter *echo.Echo
+	EchoRouter  *echo.Echo
+	Log         *slog.Logger
+	UserService services.UserService
+	ItemService services.ItemService
 }
 
-func NewHandler(log *slog.Logger, cfg Config) {
-	h := Handler{log: log}
+func NewHandler(cfg Config) Handler {
+	h := Handler{
+		Log:         cfg.Log,
+		UserService: cfg.UserService,
+		ItemService: cfg.ItemService,
+	}
+	return h
+}
 
+func SetupRoutes(cfg Config, handler Handler) {
 	itemGroup := cfg.EchoRouter.Group("/items")
-	itemGroup.GET("", h.GetItems)
-	itemGroup.GET("/:id", h.GetItemByID)
-	itemGroup.POST("", h.CreateItem)
-	itemGroup.PUT("/:id", h.UpdateItem)
-	itemGroup.DELETE("/:id", h.DeleteItem)
+	itemGroup.GET("", handler.GetItems)
+	itemGroup.GET("/:id", handler.GetItemByID)
+	itemGroup.POST("", handler.CreateItem)
+	itemGroup.PUT("/:id", handler.UpdateItem)
+	itemGroup.DELETE("/:id", handler.DeleteItemByID)
+
+	userGroup := cfg.EchoRouter.Group("/users")
+	userGroup.POST("", handler.RegisterUser)
 
 	cfg.EchoRouter.GET("/swagger/*", echoSwagger.WrapHandler)
 }
